change pass + update profile
