# API/controllers/userController.js
@@ -4,25 +4,21 @@ const appError = require("../utils/appError");
 const userModel = require("../models/user");
 const catchAsync = require("../utils/catchAsync");
 const jwtToken = require("../utils/jwtToken");
-const helpers = require("../utils/helpers");
-const crypto = require("crypto");
+const cloudinary = require("cloudinary").v2;
+const fileUploader = require("../utils/uploadImage");
 class userController {
+    updateImage = fileUploader.single("avatar");
     createUser = catchAsync(async (req, res) => {
-        payload.account_id = req.account.id;
         const user = {
             firstName: req.body.firstName,
             lastName: req.body.lastName,
             avatar: process.env.DEFAULT_AVATAR,
-            tel: req.body.tel,
+            tel: req.body.phoneNumber,
             address: req.body.address,
-            account_id: req.account.account_id,
+            account_id: req.account.id,
         };
         const rs = await userModel.createUser(user);
         jwtToken.generateAndSendJWTToken(rs[0][0], 200, res, req);
-        // res.status(200).json({
-        //     Code: 200,
-        //     Data: rs,
-        // });
     });
     getUserByMe = catchAsync(async (req, res) => {
         if (req.user != undefined) {
@@ -32,6 +28,54 @@ class userController {
             });
         } else {
             //
+        }
+    });
+    updateUser = catchAsync(async (req, res) => {
+        if (req.user != undefined) {
+            let body = {
+                id: req.user.id,
+                ...req.body,
+                avatar: req.user.avatar,
+            };
+            const rs = await userModel.updateUser(body);
+            res.status(200).json({
+                Code: 200,
+                Data: rs[0][0],
+            });
+        } else {
+            return next(new appError("Không tìm thấy người dùng!", 404));
+        }
+    });
+    updateAvatar = catchAsync(async (req, res, next) => {
+        if (req.user != undefined) {
+            const body = {
+                id: req.user.id,
+                first_name: req.user.first_name,
+                last_name: req.user.last_name,
+                tel: req.user.tel,
+                address: req.user.address,
+                avatar: req.file.path,
+            };
+            try {
+                const rs = await userModel.updateUser(body);
+                let parts = req.user.avatar.split("/");
+                let id =
+                    parts.slice(parts.length - 2, parts.length - 1).join("/") +
+                    "/" +
+                    parts[parts.length - 1].split(".")[0];
+                cloudinary.uploader.destroy(id);
+                res.status(200).json({
+                    Code: 200,
+                    Data: rs[0][0],
+                });
+            } catch (err) {
+                if (req.file) {
+                    cloudinary.uploader.destroy(req.file.filename);
+                }
+                next(err);
+            }
+        } else {
+            return next(new appError("Không tìm thấy người dùng!", 404));
         }
     });
 }
